patterns/containers/ec2s-behind-alb/cloud_formation_networking.yaml
Resources:
  AlbSGE6D0E5D1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB - inbound HTTP from internet
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTP from anywhere
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIpv6: ::/0
          Description: Allow HTTP from anywhere (IPv6)
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Fn::ImportValue: VpcSubnets:ExportsOutputRefVpc8378EB38272D6E3A
    Metadata:
      aws:cdk:path: Ec2sAlbNetworkingStack/AlbSG/Resource
  ALBAEE750D2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: "true"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - AlbSGE6D0E5D1
            - GroupId
      Subnets:
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet3SubnetBE12F0B65CC33245
      Type: application
    Metadata:
      aws:cdk:path: Ec2sAlbNetworkingStack/ALB/Resource
  ALBHttpListener04CE8CD0:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - FixedResponseConfig:
            ContentType: text/plain
            MessageBody: Not Found
            StatusCode: "404"
          Type: fixed-response
      LoadBalancerArn:
        Ref: ALBAEE750D2
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: Ec2sAlbNetworkingStack/ALB/HttpListener/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/9WQ3WrDMAyFn6W+LI4XQtlF77ZRRmAwaC9LGK6tFrWe4vknZRi/+3CaQrY32JXQOUefkBrRrGpRL+TVV0pfKoMHkXZBqguXV/+RQDUi7UBFh+H71fXR7hMbrGJrtmScafDKoQ3Y06hknpjUuqWTA++30QBb7xNTkloySHBTgovAmeqJQJVRP9Ei4VeEVt9RmbMl6/4Jkx+l8XAnb+bg4k6hguxyx1+O9OurmYORPqAyvdQHaSQppNPQiPRkrUEly/63Xurn0QM3QsspBTU3+HwAfQD6G57EnEv3HoONIXPqNYizfxialXgU9eLsESsXKeAniO2t/gAIoTteLQIAAA==
    Metadata:
      aws:cdk:path: Ec2sAlbNetworkingStack/CDKMetadata/Default
Outputs:
  AlbEndpoint:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - ALBAEE750D2
              - DNSName
  ExportsOutputFnGetAttAlbSGE6D0E5D1GroupId3836EA9B:
    Value:
      Fn::GetAtt:
        - AlbSGE6D0E5D1
        - GroupId
    Export:
      Name: Ec2sAlbNetworkingStack:ExportsOutputFnGetAttAlbSGE6D0E5D1GroupId3836EA9B
  ExportsOutputRefALBHttpListener04CE8CD0A657CDCB:
    Value:
      Ref: ALBHttpListener04CE8CD0
    Export:
      Name: Ec2sAlbNetworkingStack:ExportsOutputRefALBHttpListener04CE8CD0A657CDCB
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
